added to the js and html to get game logic to work

--- a/rpsindex.html
+++ b/rpsindex.html
@@ -9,14 +9,18 @@
 <body>
   <div class = "container">
     <h1>Paper, Scissors, Rock - show me what you got!</h1>
+      <section>
+        <h1 id="decision"></h1>
+        <h1 id="gameoutcome"></h1>
 
       <img src="images/paperimage.svg" alt="paper">
-      <button>Paper</button>
+      <button id="paperButton">Paper</button>
       <img src="images/scissorimage.svg" alt="scissors">
-      <button>Scissors</button>
+      <button id="scissorButton">Scissors</button>
       <img src="images/rockimage.svg" alt="rock">
-      <button>Rock</button>
-      
+      <button id="rockButton">Rock</button>
+
   </div>
+  <script src='rps.js'></script>
 </body>
 </html>
